New fail whale page.

--- a/public/error.html
+++ b/public/error.html
@@ -1,8 +1,7 @@
 <html>
   <head>
-    <link href="/assets/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/assets/revolution.css" media="screen" rel="stylesheet" type="text/css">
-    <script src="/assets/bootstrap-dropdown.js" type="text/javascript"></script>
+    <link href="https://s3-us-west-1.amazonaws.com/moonlite/static/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="https://s3-us-west-1.amazonaws.com/moonlite/static/revolution.css" media="screen" rel="stylesheet" type="text/css">
     <style>
        html, body, p, h1, h2, h3 { font-size: 25px; font-family: Arial; line-height: 30px;}
     </style>
