addded links to our names in about section. cant believe we forgot this

--- a/public/error.html
+++ b/public/error.html
@@ -19,7 +19,7 @@
         </div>
         <div style="margin-left: 188px;">
           <h3 style="top:3px;">
-            <a href="http://localhost:3000/" style="font-size: 26px;"><img alt="Mb+logo+nav+bar" src="https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png" style="position:absolute;">
+            <a href="http://www.metabright.com" style="font-size: 26px;"><img alt="Mb+logo+nav+bar" src="https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png" style="position:absolute;">
             </a>
           </h3>
         </div>
