--- a/public/422.html
+++ b/public/422.html
@@ -1,26 +1,38 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>The change you wanted was rejected (422)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
-</head>
-
-<body>
-  <!-- This file lives in public/422.html -->
-  <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
-  </div>
-</body>
+  <head>
+    <link href="https://s3-us-west-1.amazonaws.com/moonlite/static/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="https://s3-us-west-1.amazonaws.com/moonlite/static/revolution.css" media="screen" rel="stylesheet" type="text/css">
+    <style>
+       html, body, p, h1, h2, h3 { font-size: 25px; font-family: Arial; line-height: 30px;}
+    </style>
+  </head>
+  <body>
+    <nav class="topbar" data-dropdown="dropdown" data-scollspy="scrollspy">
+      <div class="fill">
+        <div style="position:absolute;">
+          <div class="chunk cloudy"></div>
+          <div class="chunk cloudy"></div>
+          <div class="chunk cloudy"></div>
+          <div class="chunk cloudy"></div>
+          <div class="chunk cloudy"></div>
+          <div class="chunk cloudy"></div>
+        </div>
+        <div style="margin-left: 188px;">
+          <h3 style="top:3px;">
+            <a href="http://localhost:3000/" style="font-size: 26px;"><img alt="Mb+logo+nav+bar" src="https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png" style="position:absolute;">
+            </a>
+          </h3>
+        </div>
+      </div>
+    </nav>
+    <div class="body container">
+      <center>
+        <img class="error_image" src="https://s3.amazonaws.com/moonlite-nsdub/static/stonewalled2.png" style="width: 400px; margin-top: 60px;">
+        <div style="width:80%; margin: 10px auto 20px auto; border-radius: 10px; padding: 15px;">
+          <p>Sorry, stoney fell. We're trying to put him back together again.</p>
+          <p>Give us a few, he's heavy.</p>
+        </div>
+      </center>
+    </div>
+  </body>
 </html>
