making mb https friendly

--- a/app/assets/javascripts/mosaic/base.html
+++ b/app/assets/javascripts/mosaic/base.html
@@ -54,13 +54,13 @@
 
 		<!--Bar-->
 		<div class="mosaic-block bar">
-			<a href="http://buildinternet.com/project/mosaic" target="_blank" class="mosaic-overlay">
+			<a href="https://buildinternet.com/project/mosaic" target="_blank" class="mosaic-overlay">
 				<div class="details">
 					<h4>Mosaic - Sliding Boxes and Captions jQuery Plugin</h4>
 					<p>by Build Internet</p>
 				</div>
 			</a>
-			<div class="mosaic-backdrop"><img src="http://buildinternet.s3.amazonaws.com/projects/mosaic/mosaic.jpg"/></div>
+			<div class="mosaic-backdrop"><img src="https://buildinternet.s3.amazonaws.com/projects/mosaic/mosaic.jpg"/></div>
 		</div>
 		
 		<div class="clearfix"></div>
