--- a/public/500.html
+++ b/public/500.html
@@ -46,7 +46,7 @@
     <nav class="topbar" data-dropdown="dropdown" data-scollspy="scrollspy">
       <div class="fill">
         <div style="margin-left: 8%;">
-          <a href="http://www.metabright.com" style="position: relative; top: 8px;">
+          <a href="https://www.metabright.com" style="position: relative; top: 8px;">
             <img alt="Mb+logo+nav+bar" src="https://s3.amazonaws.com/moonlite-nsdub/static/MetaBrightLogo.png" style="position:absolute; width: 160px;">
           </a>
         </div>
