--- a/public/422.html
+++ b/public/422.html
@@ -43,7 +43,7 @@
     <nav class="topbar" data-dropdown="dropdown" data-scollspy="scrollspy">
       <div class="fill">
         <div style="margin-left: 8%;">
-          <a href="http://www.metabright.com" style="position: relative; top: 3px;">
+          <a href="https://www.metabright.com" style="position: relative; top: 3px;">
             <img alt="Mb+logo+nav+bar" src="https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png" style="position:absolute;">
           </a>
         </div>
