--- a/public/500.html
+++ b/public/500.html
@@ -5,6 +5,7 @@
     <link href='http://fonts.googleapis.com/css?family=Muli:300' rel='stylesheet' type='text/css'>
     <style>
       html, body, p, h1, h2, h3 { font-size: 22px; font-family: 'Muli', sans-serif; line-height: 30px;}
+      span, a { font-size: 16px; font-family: 'Muli', sans-serif;}
       .topbar {
         z-index:1010; 
         border-bottom: 1px solid rgb(201, 201, 201);
@@ -29,17 +30,18 @@
         border: 1px solid rgba(0, 0, 0, 0.1);
         background: rgba(255, 255, 255, 0.8);
       }
+      .container.body {
+        padding: 0;
+        border: 5px solid rgba(36, 72, 109, 0.8);
+      }
       .holder {
         background-color: white;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 10px;
-        border: 1px solid rgba(0, 0, 0, 0.1);
         overflow: hidden;
       }
       .copy {
         margin: 0 auto 30px auto; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px;
       }
+      
     </style>
   </head>
   <body>
@@ -59,6 +61,9 @@
           <div class="copy">
             <p>Sorry, Stoney fell.</p>
             <p>Bear with us while we put him back together again.</p>
+            <span>To report your issue, please email 
+              <a href="mailto:support@metabright.com" target="_blank">support@metabright.com</a>.
+            </span>
           </div>
         </center>
       </div>
